fix stat comparison

--- a/etc/tomestone.yml
+++ b/etc/tomestone.yml
@@ -1,4 +1,18 @@
 ---
+AST:
+  stats:
+    - Mind
+    - Piety
+  shops:
+    '50':
+      - 1769534
+    '60':
+      - 1769733
+    '70':
+      - 1769908
+    '80':
+      - 1769975
+      - 1770052
 BLM:
   stats:
     - Intelligence
@@ -9,7 +23,7 @@ BLM:
       - 1769733
     '70':
       - 1769908
-    '80': 
+    '80':
       - 1769975
       - 1770052
 DRK:
